[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] } #remove dynamic feature before building release
noise = "0.7.0"
bevy_flycam = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3